[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MoneyPrinterTurbo"
version = "1.2.6"
description = "一个全自动生成视频文案、视频素材、视频字幕、视频背景音乐，然后合成高清短视频的工具"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "harry0703", email = "example@example.com"}
]

# 定义主要依赖
dependencies = [
    "moviepy==2.1.2",
    "streamlit==1.45.0",
    "edge_tts==6.1.19",
    "fastapi==0.115.6",
    "uvicorn==0.32.1",
    "openai==1.56.1",
    "faster-whisper==1.1.0",
    "loguru==0.7.3",
    "google.generativeai==0.8.3",
    "dashscope==1.20.14",
    "g4f==0.5.2.2",
    "azure-cognitiveservices-speech==1.41.1",
    "redis==5.2.0",
    "python-multipart==0.0.19",
    "pyyaml",
    "requests>=2.31.0",
    "blinker>=1.6.2",
    "click>=8.1.3",
    "protobuf>=4.25.0",
    "win32-setctime>=1.1.0",
    "typing-extensions>=4.8.0",
    "toml>=0.10.2",
    "colorama>=0.4.6",  # 添加缺失的依赖
]

[project.urls]
Homepage = "https://github.com/harry0703/MoneyPrinterTurbo"
Issues = "https://github.com/harry0703/MoneyPrinterTurbo/issues"

# 开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

# 配置 setuptools，指定包含的包
[tool.setuptools]
packages = ["app", "webui", "resource", "test"]

# 额外的工具配置
[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88